ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: envoy
    annotations:
        "sidecar.jaegertracing.io/inject": "jaeger"
spec:
    replicas: 3
    template:
        spec:
            containers:
                - name: envoy
                  image: envoy
                  command:
                      - "envoy"
                  args:
                      - "-c"
                      - "/etc/envoy/envoy.yaml"
                  volumeMounts:
                      - name: envoy-config
                        mountPath: /etc/envoy
                      - name: jrock-us-certs
                        mountPath: /jrock.us
                  readinessProbe:
                      httpGet:
                          path: /server_info
                          port: 9901
                  livenessProbe:
                      httpGet:
                          path: /server_info
                          port: 9901
                  ports:
                      - name: envoy-admin
                        containerPort: 9901
                      - name: http
                        containerPort: 80
                      - name: https
                        containerPort: 443
                      - name: http-noproxy
                        containerPort: 81
                      - name: https-noproxy
                        containerPort: 444
                  resources:
                      requests:
                          memory: "100Mi"
                      limits:
                          memory: "100Mi"
                - name: jsso
                  image: jsso
                  volumeMounts:
                      - name: envoy-policy
                        mountPath: /policy
                  ports:
                      - name: jsso-admin
                        containerPort: 8081
                      - name: grpc
                        containerPort: 9000
                  livenessProbe:
                       httpGet:
                           path: /metrics
                           port: 8081
                  readinessProbe:
                      httpGet:
                          path: /metrics
                          port: 8081
                  env:
                      - name: POLICY_PATH
                        value: "/policy/policy.rego"
                      - name: GRPC_ADDRESS
                        value: "127.0.0.1:9000"
                  resources:
                      requests:
                          memory: "30Mi"
                      limits:
                          memory: "30Mi"
            volumes:
                - name: envoy-config
                  configMap:
                      name: envoy-config
                - name: envoy-policy
                  configMap:
                      name: envoy-policy
                - name: jrock-us-certs
                  secret:
                      secretName: jrock-us-tls
            imagePullSecrets:
                - name: registry-credentials
